fix: hero content top on mobile devices

--- a/src/components/hero/Hero.module.scss
+++ b/src/components/hero/Hero.module.scss
@@ -105,6 +105,7 @@
       max-width: 300px;
       font-size: $par-md;
       left: 50%;
+      top: 40%;
       transform: translateX(-50%);
       @include flexbox-vrt(0);
 
